# kvm

./: .gitignore  build.zig  build.zig.zon  flake.nix  justfile  pyproject.toml  treefmt.nix
.claude/: settings.local.json
docs/: README.md  architecture.md  configuration.md  dev-desktop-vm.md  development.md  devices.md  mouse-support.md  protocol.md  roadmap.md  uinput-routing.md  vm-testing.md  zig-evdev-feasibility.md  zig-evdev-migration.md
src/: client.zig  device.zig  hotplug.zig  loop.zig  main.zig  multiplexer.zig  net.zig  protocol.zig  root.zig  server.zig  uinput.zig
src/pykvm/: client.py  config.py  devices.py  protocol.py  server.py
tests/integration/: test_client.py
tests/unit/: test_config.py  test_protocol.py
