[project]
name = "pykvm"
version = "0.1.0"
description = "KVM switch for Linux using evdev/uinput"
requires-python = ">=3.12"
dependencies = [
    "evdev>=1.7.0",
]

[project.scripts]
pykvm-server = "pykvm.server:main"
pykvm-client = "pykvm.client:main"

[build-system]
requires = ["uv_build>=0.6.0,<0.7.0"]
build-backend = "uv_build"
